--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" >
-    <title>DDJ 400</title>
+    <title>DDJ</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-          <h1 class="logo">DDJ 400</h1>
-          <ul class="nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <!-- <li><a href="#specs">Specs</a></li>
-                      <li><a href="#contact">Contact</a></li> -->
+  <nav>
+    <label class="logo">DDJ </label>
+    <ul>
+       <li>
+          <a href="#">Menu  </a>
+          <ul>
+             <li><a href="#about">About</a></li>
           </ul>
-        </div>
-      </nav>
-  
+    </ul>
+ </nav>
+
       <!-- Showcase -->
       <section class="section-a">
         <div class="container">
           <div>
-            <h1>The best budget DJ Controller </h1>
+            <h1>The best budget DJ Controller. </h1>
             <p>
                 <!--Fa Litera L Mare-->
                 <span>The</span>
-                <span>DDJ-400</span>
+                <span class = "title">DDJ-400</span>
                 <span>is</span>
                 <span>a</span>
                 <span>two</span>
@@ -71,6 +70,7 @@
                 
             </p>
             <a href="#about" class="btn">Read More</a>
+            <a href="https://www.zeedoshop.ro/produs_pioneer-ddj-400_34432_0?gclid=CjwKCAjwo8-SBhAlEiwAopc9W9Y_XaRBFKsq6_sjD6qQb8Nog6uzMQqKr1ko107tOnqRcEqaLHRTqhoCefMQAvD_BwE" target = "blank" class="btn2">Buy Now</a>
           </div>
           <img src="pioneer-dj-ddj-400-utilizate.jpg" alt="" />
         </div>
@@ -84,7 +84,7 @@
             <h2 class="text-5 mt-1">Simplicity is key</h2>
             <p class="mt-1">
               Becoming a DJ it's not easy and it's never going to be. But first you need to practice before you can perform at a gig. With our simple, but perfoming solution,
-              you can do this without breaking the bank.
+              you can do this without breaking the bank
             </p>
           </div>
         </div>
