--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
        <li>
           <a href="#">Menu  </a>
           <ul>
-             <li><a href="#about">About</a></li>
+             <li><a href="index.html">Home  </a></li>
+             <li><a href="DJ.html">Become a DJ  </a></li>
+             <li><a href="History.html">History</a></li>
           </ul>
     </ul>
  </nav>
